--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^7.6.5",
     "multer": "^1.4.5-lts.1",
+    "node": "^21.7.1",
     "validator": "^13.11.0"
   },
   "devDependencies": {
